# llm-stream-tuner

./: .pre-commit-config.yaml  README.md  README_en.md  pyproject.toml
configs/: attack_generate.yaml  common_llm.yaml  intent_extract.yaml  reminder_generate.yaml  single.yaml  star1_data.yaml  system_prompt_remove.yaml
data/: aim.json
llm_stream_tuner/cache_manager/: factory.py
llm_stream_tuner/data/: data_loader.py
llm_stream_tuner/data/data_formatter/: base.py  derived.py  registry.py
llm_stream_tuner/inference/: base.py  cached.py  hf.py  vllm.py
llm_stream_tuner/inference/api_llm/: anthropic.py  base.py  factory.py  gemini.py  openai_api.py
llm_stream_tuner/pipeline/attack_generator/: __init__.py  __main__.py  base.py  derived.py  factory.py  prompts.py  registry.py
llm_stream_tuner/pipeline/intent_extractor/: __init__.py  __main__.py  base.py  derived.py  factory.py  prompts.py  registry.py
llm_stream_tuner/pipeline/reminder_generator/: __init__.py  __main__.py  base.py  derived.py  factory.py  prompts.py  registry.py
llm_stream_tuner/pipeline/safety_judger/: __init__.py  base.py  derived.py  factory.py  prompts.py  registry.py
llm_stream_tuner/pipeline/system_prompt_remover/: __init__.py  __main__.py  base.py  derived.py  factory.py  prompts.py  registry.py
llm_stream_tuner/prompts/: __init__.py  base.py  prompts.py
llm_stream_tuner/task/: base.py  single.py
llm_stream_tuner/utils/: config.py  extract_tools.py  json_utils.py  logger.py  type_utils.py
tests/: README.md  conftest.py  test_config.py
