[project]
name = "llm-stream-tuner"
version = "0.1.0"
description = "动态增量开放学习的大语言模型框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "addict>=2.4.0",
    "anthropic>=0.62.0",
    "datasets>=4.0.0",
    "google-genai>=1.29.0",
    "modelscope>=1.29.0",
    "openai>=1.99.6",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "torch==2.6.0",
    "transformers>=4.55.2",
    "vllm>=0.8.5.post1",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["llm_stream_tuner", "tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
show_error_codes = true
disable_error_code = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["llm_stream_tuner"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
